<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/L">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/profile_avatar_size"
        android:layout_height="@dimen/profile_avatar_size"
        android:layout_marginTop="@dimen/XS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_avatar" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/XS"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        tools:text="Ivan Ivanov" />

    <by.wolearn.profile.ui.widgets.NumberView
        android:id="@+id/totalNumber"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/S"
        app:layout_constraintEnd_toStartOf="@id/todayNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:ovalColor="@color/blue"
        app:ovalSize="60dp"
        app:textSize="25sp" />

    <TextView
        android:id="@+id/total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/XS"
        android:gravity="center"
        android:text="@string/profile_today"
        app:layout_constraintEnd_toEndOf="@id/totalNumber"
        app:layout_constraintStart_toStartOf="@id/totalNumber"
        app:layout_constraintTop_toBottomOf="@id/totalNumber" />

    <by.wolearn.profile.ui.widgets.NumberView
        android:id="@+id/todayNumber"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/S"
        app:layout_constraintEnd_toStartOf="@id/categoriesNumber"
        app:layout_constraintStart_toEndOf="@id/totalNumber"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:ovalColor="@color/green"
        app:ovalSize="60dp"
        app:textSize="25sp" />

    <TextView
        android:id="@+id/today"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/XS"
        android:gravity="center"
        android:lines="2"
        android:text="@string/profile_total"
        app:layout_constraintEnd_toEndOf="@id/todayNumber"
        app:layout_constraintStart_toStartOf="@id/todayNumber"
        app:layout_constraintTop_toBottomOf="@id/todayNumber" />


    <by.wolearn.profile.ui.widgets.NumberView
        android:id="@+id/categoriesNumber"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/S"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/todayNumber"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:ovalColor="@color/red"
        app:ovalSize="60dp"
        app:textSize="25sp" />

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/XS"
        android:gravity="center"
        android:lines="2"
        android:text="@string/profile_categories"
        app:layout_constraintEnd_toEndOf="@id/categoriesNumber"
        app:layout_constraintStart_toStartOf="@id/categoriesNumber"
        app:layout_constraintTop_toBottomOf="@id/categoriesNumber" />


</androidx.constraintlayout.widget.ConstraintLayout>
